# crosspoint-reader-apps

./: .gitignore  README.md  USER_GUIDE.md
.skills/: SKILL.md
lib/EpdFont/builtinFonts/: all.h
lib/EpdFont/scripts/: build-font-ids.sh  convert-builtin-fonts.sh  sd-fonts.yaml
lib/Epub/: Epub.cpp  Epub.h
lib/Epub/Epub/: BookMetadataCache.cpp  Section.h
lib/FsHelpers/: FsHelpers.h
lib/GfxRenderer/: GfxRenderer.cpp  GfxRenderer.h
lib/HtmlArticleExtractor/: HtmlArticleExtractor.cpp  HtmlArticleExtractor.h
lib/I18n/translations/: belarusian.yaml  catalan.yaml  czech.yaml  danish.yaml  dutch.yaml  english.yaml  finnish.yaml  french.yaml  german.yaml  hebrew.yaml  hungarian.yaml  italian.yaml  kazakh.yaml  lithuanian.yaml  polish.yaml  portuguese.yaml  romanian.yaml  russian.yaml  slovenian.yaml  spanish.yaml  swedish.yaml  turkish.yaml  ukrainian.yaml  valencian.yaml
lib/KOReaderSync/: ProgressMapper.cpp  ProgressMapper.h
lib/RssParser/: RssParser.cpp  RssParser.h
lib/ZipFile/: ZipFile.h
src/: BookmarkEntry.h  CrossPointSettings.cpp  CrossPointSettings.h  JsonSettingsIO.cpp  JsonSettingsIO.h  RssFeedStore.cpp  RssFeedStore.h  SettingsList.h  fontIds.h  main.cpp
src/activities/: Activity.cpp  ActivityManager.cpp  ActivityManager.h  ActivityResult.h  App.h  AppRegistry.cpp  AppRegistry.h
src/network/: HttpDownloader.cpp
src/util/: BookmarkUtil.cpp  BookmarkUtil.h
test/: CMakeLists.txt
test/html_article_extractor/: CMakeLists.txt  HtmlArticleExtractorTest.cpp
test/rss_parser/: CMakeLists.txt  Print.h  RssParserTest.cpp
(+97 files in other folders)
